# timelocked

./: .gitignore  .ignore  AGENTS.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md
.github/workflows/: ci.yml  compile-check.yml  release.yml
.opencode/agents/: code_review.md  development_loop.md  implement.md  test_tui.md
docs/: architecture.md  binary-file-format.md  domain-language.md
scripts/: release.sh
src/: lib.rs  main.rs
src/base/: cancellation_token.rs  error.rs  file_manager.rs  hidden_entry.rs  mod.rs  path.rs  progress_status.rs  result.rs
src/configuration/: mod.rs  runtime.rs
src/domains/: mod.rs
src/domains/timelock/: calibration_service.rs  delay_estimation.rs  hardware_profile.rs  lock_difficulty.rs  mod.rs  puzzle_material.rs  puzzle_service.rs
src/domains/timelocked_file/: artifact.rs  chunk_crypto.rs  chunk_frame.rs  container.rs  header.rs  header_factory.rs  lock_output_path.rs  mod.rs  notice.rs  output_path.rs  payload_recovery.rs  payload_region.rs  prefix.rs  protected_stream.rs  reader.rs  recovery.rs  reed_solomon.rs  shard_record.rs  superblock.rs  superblock_body.rs  test_support.rs  tests.rs  timelock_material.rs  verification.rs  writer.rs
src/usecases/: calibrate.rs  inspect.rs  mod.rs  unlock.rs  verify.rs
src/usecases/lock/: calibration.rs  input_staging.rs  mod.rs  output_verification.rs  payload_writer.rs  persistence.rs
src/userinterfaces/: mod.rs
src/userinterfaces/cli/: handlers.rs  mod.rs  models.rs  progress.rs  render.rs
src/userinterfaces/tui/: mod.rs  (+2 more)
tests/: cli_mvp.rs  release_script.rs
(+40 files in other folders)
