[package]
name = "timelocked"
version = "0.1.2"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "CLI tool to create and unlock timelocked files"

[dependencies]
anyhow = "1.0"
blake3 = "1.5"
chacha20poly1305 = "0.10"
chrono = { version = "0.4", features = ["clock"] }
clap = { version = "4.5", features = ["derive"] }
crc32c = "0.6"
crossterm = "0.28"
glass_pumpkin = "1.7"
indicatif = "0.17"
num-bigint = "0.4"
num-integer = "0.1"
num-traits = "0.2"
rand = "0.8"
ratatui = "0.29"
reed-solomon-erasure = "6"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tempfile = "3.10"
thiserror = "2.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
zeroize = "1.8"

[dev-dependencies]
assert_cmd = "2.0"
predicates = "3.1"
tempfile = "3.10"
